...
        android:translationY="-200dp"
        app:srcCompat="@drawable/oval" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/login_edit_username"
        android:layout_height="wrap_content"
        android:layout_marginTop="-170dp"
        android:layout_below="@id/imageView"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/welcome_back_cap"
...
        android:autofillHints="username"
        android:hint="@string/username_cap"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_username"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="20dp"
...
        android:hint="@string/password_cap"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_password"
        android:layout_alignStart="@id/login_edit_username"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/login_register"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@id/login_create_account"
        android:backgroundTint="@color/blue_nav_bar"
        android:fontFamily="@font/roboto_medium"
...
